added profile picture

--- a/index.html
+++ b/index.html
@@ -68,13 +68,16 @@
   <main>
     <div class="container-fluid home">
       <div class="col-12 d-flex flex-column justify-content-center p-2">
-        <p class="name-font text-white text-center">Timothy McCormick</p>
+        <div class="d-flex justify-content-center">
+          <img class="profile-img mb-4" src="./IMG_2191.jpg" alt="">
+        </div>
+        <p class="name-font text-white text-center mt-4">Timothy McCormick</p>
         <p class="position-font text-white text-uppercase text-center">software developer. lifelong learner.</p>
         <p class="position-font text-white text-uppercase text-center">husband. father.</p>
       </div>
       <div class="col-12 d-flex justify-content-center align-items-center">
-        <a href="#about"><button class="contact-button btn btn-light rounded-pill"><i class="mdi mdi-arrow-down"></i> Go
-            To About <i class="mdi mdi-arrow-down"></i></button>
+        <a href="#about"><button class="contact-button btn btn-light rounded-pill">Go
+            To About</button>
         </a>
       </div>
     </div>
@@ -112,8 +115,8 @@
           </h5>
 
           <div class="col-12 d-flex justify-content-center align-items-center pt-5">
-            <a href="#portfolio" to="/#portfolio"><button class="contact-button btn btn-light rounded-pill"><i
-                  class="mdi mdi-arrow-down"></i> Go To Portfolio <i class="mdi mdi-arrow-down"></i></button></a>
+            <a href="#portfolio" to="/#portfolio"><button class="contact-button btn btn-light rounded-pill">Go To
+                Portfolio</button></a>
           </div>
 
         </div>
@@ -169,9 +172,8 @@
 
       </div>
       <div class="col-12 d-flex justify-content-center align-items-center">
-        <a href="#contact" to="/#contact"><button class="contact-button btn btn-light rounded-pill"><i
-              class="mdi mdi-arrow-down"></i> Go To
-            Contact <i class="mdi mdi-arrow-down"></i></button></a>
+        <a href="#contact" to="/#contact"><button class="contact-button btn btn-light rounded-pill">Go To
+            Contact</button></a>
       </div>
     </div>
 
@@ -179,6 +181,13 @@
     <div class="container-fluid about d-flex align-items-center mb-4" id="contact">
       <div class="col-12 d-flex flex-column align-items-center">
         <h1 class="text-center text-white m-2 p-2 pb-5">Contact Me</h1>
+        <h4 class="text-center text-white m-2 p-2 pb-5">Coming Soon... See me on LinkedIn!</h4>
+
+        <a href="https://www.linkedin.com/in/timothy-mccormick89/">
+          <h3 class="text-center text-blue m-2 p-2 pb-5 selectable"><i
+              class="text-center text-blue m-2 p-2 pb-5 selectable mdi mdi-linkedin f-24 li-font-size"></i></h3>
+
+        </a>
 
         <h5 class="text-white m-2 p-2 pt-5">
         </h5>
@@ -189,10 +198,7 @@
 
         </h5>
 
-        <div class="col-12 d-flex justify-content-center align-items-center pt-5">
-          <a href="#portfolio" to="/#portfolio"><button class="contact-button btn btn-light rounded-pill"><i
-                class="mdi mdi-arrow-down"></i> Go To Portfolio <i class="mdi mdi-arrow-down"></i></button></a>
-        </div>
+
 
       </div>
     </div>
